@@ -183,6 +183,8 @@ typedef struct wireless_network {
         quality = signal = noise = 0;
         best_quality = best_signal = best_noise = 0;
         best_lat = best_lon = best_alt = 0;
+
+        client_disconnects = 0;
     }
 
     wireless_network_type type;
@@ -257,6 +259,8 @@ typedef struct wireless_network {
 
     map<mac_addr, wireless_client *> client_map;
 
+    // State tracking stuff
+    int client_disconnects;
 };
 
 
